scripts/tests/errors/err_keyword_in_expr.bu
// BAD: random tokens, class keyword mid-expression
var x = class + 10;
print("should not reach here");
